<resources>
    <string name="app_name">Compute</string>
    <string name="defaultShowOnResultTextView">0</string>

    <string name="Btn9">9</string>
    <string name="Btn8">8</string>
    <string name="Btn7">7</string>
    <string name="Btn6">6</string>
    <string name="Btn5">5</string>
    <string name="Btn4">4</string>
    <string name="Btn3">3</string>
    <string name="Btn2">2</string>
    <string name="Btn1">1</string>
    <string name="Btn0">0</string>

    <string name="BtnDivide">/</string>
    <string name="BtnMultiply">*</string>
    <string name="BtnAdd">+</string>
    <string name="BtnClear">CLEAR</string>
    <string name="BtnCompute">=</string>
    <string name="BtnMinus">-</string>
</resources>